fix: stretch the message block to the full width

--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -422,6 +422,8 @@ a .pgn__card {
   border-radius: 0 0 .375rem .375rem;
 
   .pgn__card-status__message-content {
+    width: 100%;
+
     & > :last-child {
       margin-bottom: 0;
     }
